Updated to PoC v1.0.1. Improved memory tester. Unified FanControl examples. Vivado-specific fixes.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ __pycache__
 !/projects/**/*.xcf
 !/projects/**/*.xise
 !/projects/**/*.xpr
+!/projects/**/ise/.gitempty
 !/projects/**/iseconfig/filter.filter
 !/projects/**/*.sdc
 !/projects/**/*.qpf
